# bruit

./: .gitignore  README.md  pyproject.toml  setup.sh
bruit/: cli.py
bruit/modules/: config_loader.py  plotting.py
bruit/preprocessing/: feature_extraction.py  preprocess.py  runner.py
bruit/train_model/: cnn.py  cnn_seq.py  train_model.py
configs/: parameters.yaml  paths.yaml
